package com.nhnacademy;

public interface Input {
    void wireIn(Wire wire);
}
