package com.nhnacademy;

public interface Output {
    void wireOut(Wire wire);
}
